# tq-kv

./: .gitignore  ARCHITECTURE.md  BENCHMARK - Copy.md  BENCHMARK.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md  TODOS.md  build.bat  build.rs  build_c_test.ps1  build_integration_test.ps1  build_test_ffi.bat  program.md
benchmarks/: COMPARISON_FINDINGS.md  FULL_COMPARISON.md  compare_tqplus.py  eval_long.txt  eval_sample.txt  full_comparison.py
candle-patches/: CHECKLIST.md  PR_INSTRUCTIONS.md  README.md  cuda_rms_norm.rs  cuda_rope.rs  cuda_softmax.rs
docs/: hn-launch.md  paper-final.md  paper-turboquant-on-quantized-models.md  twitter-visuals.html  x-launch-tweets.md
docs/arxiv/: main.tex  references.bib
kernels/: common.cuh  elementwise.cu  flash_attention.cu  fused_attention.cu  fused_layer.cu  fused_mlp.cu  fused_norm.cu  hadamard.cu  qmatmul.cu  rope.cu  sampling.cu  softmax.cu  sparse_v.cu  tensor_ops.cu
llama-cpp-patch/: README.md  llama-kv-tq.cpp  llama-kv-tq.h  test_integration.c
src/: auto_tq.rs  backend.rs  calibrate.rs  catalog.rs  chat.rs  config.rs  diagnose.rs  diagnostics.rs  download.rs  engine.rs  gguf.rs  hub.rs  inference.rs  main.rs  model.rs  qmatmul.rs  quant.rs  sampling.rs  serve.rs
src/cuda/: device.rs  dtype.rs  graph.rs  kernels.rs  memory.rs  mod.rs  ops.rs  paged_kv.rs  tensor.rs
src/models/: mod.rs  turbo_generic.rs  turbo_llama.rs  turbo_qwen2.rs
src/web/: index.html
tq-kv/: Cargo.toml  README.md
tq-kv/examples/: test_ffi.c
tq-kv/include/: tq_kv.h
tq-kv/src/: bench.rs  candle_kv.rs  codebook.rs  compaction.rs  demo.rs  ffi.rs  hadamard.rs  lib.rs  main.rs  polar.rs  python.rs  qjl.rs  weight_compress.rs
tq-kv/tests/: qjl_attention_context.rs  qjl_compare.rs  qjl_long_context.rs  test_ffi.rs
