[workspace]
members = ["tq-kv"]

[package]
name = "tq-engine"
version = "0.2.0"
edition = "2021"
description = "TurboQuant-powered LLM inference engine — Pure Rust, compressed KV cache, candle backend"
keywords = ["llm", "inference", "turboquant", "kv-cache", "quantization"]

[dependencies]
tq-kv = { path = "tq-kv" }
candle-core = { version = "0.9", features = ["cuda"] }
candle-nn = "0.9"
candle-transformers = "0.9"
tokenizers = "0.20"
clap = { version = "4", features = ["derive"] }
hf-hub = "0.4"
anyhow = "1"
indicatif = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12"
ureq = { version = "2", features = ["json"] }
tracing = "0.1"
rayon = "1.10"

[[bin]]
name = "tq-engine"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
