[workspace]
members = ["tq-kv"]

[package]
name = "tq-engine"
version = "0.4.0"
edition = "2021"
description = "TurboQuant-powered LLM inference engine — Pure Rust, compressed KV cache, candle backend"
keywords = ["llm", "inference", "turboquant", "kv-cache", "quantization"]

[dependencies]
tq-kv = { path = "tq-kv", features = ["candle"] }
candle-core = { version = "0.9.2", features = ["cuda"] }
candle-nn = "0.9.2"
candle-transformers = "0.9.2"
tokenizers = "0.20"
clap = { version = "4", features = ["derive"] }
hf-hub = "0.4"
anyhow = "1"
indicatif = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tower-http = { version = "0.6", features = ["cors"] }
dirs = "5"
ureq = { version = "2", features = ["json"] }
tracing = "0.1"
rayon = "1.10"
uuid = { version = "1", features = ["v4"] }
safetensors = "0.4"

[[bin]]
name = "tq"
path = "src/main.rs"

[[bin]]
name = "tq-diagnose"
path = "src/diagnose.rs"

[profile.release]
opt-level = 3
lto = true
