[package]
name = "tq-kv"
version = "0.6.0"
edition = "2021"
description = "TurboQuant KV Cache Compression for LLMs — First working on GGUF Q4_K_M (3-Fix framework). KV Compaction (50x token reduction). Per-head adaptive bitwidth. 4-bit value compression. Calibration pipeline. SRHT QJL (115x faster). AVX2 SIMD fused attention. C FFI. 114 tests."
license = "MIT OR Apache-2.0"
keywords = ["llm", "quantization", "kv-cache", "compression", "transformers"]
categories = ["science", "compression", "algorithms"]
repository = "https://github.com/onur-gokyildiz-bhi/tq-kv"
readme = "README.md"

[lib]
crate-type = ["lib", "staticlib"]

[features]
default = ["std"]
std = ["rand", "rand_chacha"]
ffi = ["std"]
python = ["std", "pyo3"]

[[bin]]
name = "tq-kv-bench"
path = "src/main.rs"
required-features = ["std"]

[[bin]]
name = "tq-demo"
path = "src/demo.rs"
required-features = ["std"]

[dependencies]
rand = { version = "0.8", optional = true }
rand_chacha = { version = "0.3", optional = true }
rayon = { version = "1.10", optional = true }
pyo3 = { version = "0.23", optional = true, features = ["extension-module"] }

[build-dependencies]
cbindgen = { version = "0.28", optional = true }
